--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Project UFEM</title>
+</head>
+
+<body>
+    <div class="banner">
+        sth is gonna be there
+    </div>
+    <header>
+        <h1>Hello world!</h1>
+    </header>
+    <main>
+        some content
+    </main>
+    <footer>
+        stopcia
+    </footer>
+
+</body>
+
+</html>
