--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 
 <head>
     <title>Project UFEM</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
 </head>
 
 <body>
-    <div class="banner">
-        sth is gonna be there
+    <div class="cookie-banner">
+        <p> We use cookies to improve your experience. Please read our <a
+                href="https://policies.google.com/technologies/cookies?hl=en-US">cookie policy</a> for more information
+            about how we use
+            cookies.</p>
+        <button class="cookie-banner__close">x</button>
     </div>
     <header>
         <h1>Hello world!</h1>
