Cookie-banner-module code review fixes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 
 <head>
     <title>Project UFEM</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <div class="cookie-banner">
-        <p> We use cookies to improve your experience. Please read our <a
-                href="https://policies.google.com/technologies/cookies?hl=en-US">cookie policy</a> for more information
-            about how we use
-            cookies.</p>
+        <div class="cookie-banner__content">
+            <p>
+                We use cookies to improve your experience. Please read our <a
+                    href="https://policies.google.com/technologies/cookies?hl=en-US">cookie policy</a> for more
+                information
+                about how we use
+                cookies.
+            </p>
+        </div>
         <button class="cookie-banner__close">x</button>
     </div>
     <header>
