--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Project UFEM</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -10,7 +11,28 @@
         sth is gonna be there
     </div>
     <header>
-        <h1>Hello world!</h1>
+        <nav class="google-navigation">
+            <ul>
+                <li class="google-navigation__item">
+                    <a href="#" class="google-navigation__link">Gmail</a>
+                </li>
+                <li class="google-navigation__item">
+                    <a href="#" class="google-navigation__link">Images</a>
+                </li>
+                <li class="google-navigation__item">
+                    <button type="button" class="google-navigation__button products-button">
+                        <svg viewBox="0 0 24 24" width="30px" height="30px">
+                            <path
+                                d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
+                            </path>
+                        </svg>
+                    </button>
+                </li>
+                <li class="google-navigation__item">
+                    <button type="button" class="google-navigation__button button-primary">Sign in</button>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         some content
