header module visually hidden heading google

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         sth is gonna be there
     </div>
     <header>
+        <h1 class="sr-only">Google</h1>
         <nav class="google-navigation">
             <ul>
                 <li class="google-navigation__item">
