Search-module logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         <h1>Hello world!</h1>
     </header>
     <main>
-        some content
+        <div class="logo">
+            <a href="#URL_GMAIL"><img
+                    src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" />
+            </a>
+        </div>
     </main>
     <footer>
         stopcia
