--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     </div>
     <header>
         <h1 class="sr-only">Google</h1>
-        <nav class="google-navigation">
-            <ul>
-                <li class="google-navigation__item">
-                    <a href="#" class="google-navigation__link">Gmail</a>
+        <nav class="main-nav">
+            <ul class="main-nav__list">
+                <li class="main-nav__list-item">
+                    <a href="#_URL_GMAIL" class="main-nav__link">Gmail</a>
                 </li>
-                <li class="google-navigation__item">
-                    <a href="#" class="google-navigation__link">Images</a>
+                <li class="main-nav__list-item">
+                    <a href="#URL_IMAGES" class="main-nav__link">Images</a>
                 </li>
-                <li class="google-navigation__item">
-                    <button type="button" class="google-navigation__button products-button">
-                        <svg viewBox="0 0 24 24" width="30px" height="30px">
+                <li class="main-nav__list-item">
+                    <button class="button button--icon">
+                        <svg class="icon" viewBox="0 0 24 24">
                             <path
                                 d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
                             </path>
                         </svg>
                     </button>
                 </li>
-                <li class="google-navigation__item">
-                    <button type="button" class="google-navigation__button button-primary">Sign in</button>
+                <li class="main-nav__list-item">
+                    <button class="button button--primary">Sign in</button>
                 </li>
             </ul>
         </nav>
