Search-Module google buttons

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                 </div>
             </div>
         </div>
+        <div class="google-buttons">
+            <button class="google-buttons__search" type="button">Google Search</button>
+            <button class="google-buttons__search" type="button">I'm Feeling Lucky</button>
+        </div>
     </main>
     <footer>
         stopcia
