--- a/index.html
+++ b/index.html
@@ -85,7 +85,20 @@
         </div>
     </main>
     <footer>
-        stopcia
+        <div class="google-country-information">Poland</div>
+        <nav class="google-links">
+            <ul>
+                <li class="google-links__nav"><a href="#_GLINK">Advertising</a></li>
+                <li class="google-links__nav"><a href="#_GLINK">Business</a></li>
+                <li class="google-links__nav"><a href="#_GLINK">About</a></li>
+                <li class="google-links__nav"><a href="#_GLINK">How Search Works</a></li>
+            </ul>
+            <ul>
+                <li class="google-links__nav"><a href="#_GLINK">Privacy</a></li>
+                <li class="google-links__nav"><a href="#_GLINK">Terms</a></li>
+                <li class="google-links__nav"><a href="#_GLINK">Settings</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
