--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
             <button class="button button--secondary button--small">I'm Feeling Lucky</button>
         </div>
     </main>
-    <footer>
-        <div class="google-country-information">Poland</div>
-        <nav class="google-links">
+    <footer class="footer">
+        <div class="footer__country-information">Poland</div>
+        <nav class="footer__links">
             <ul>
-                <li class="google-links__nav"><a href="#_GLINK">Advertising</a></li>
-                <li class="google-links__nav"><a href="#_GLINK">Business</a></li>
-                <li class="google-links__nav"><a href="#_GLINK">About</a></li>
-                <li class="google-links__nav"><a href="#_GLINK">How Search Works</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">Advertising</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">Business</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">About</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">How Search Works</a></li>
             </ul>
             <ul>
-                <li class="google-links__nav"><a href="#_GLINK">Privacy</a></li>
-                <li class="google-links__nav"><a href="#_GLINK">Terms</a></li>
-                <li class="google-links__nav"><a href="#_GLINK">Settings</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">Privacy</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">Terms</a></li>
+                <li class="footer__links-item"><a href="#_GLINK">Settings</a></li>
             </ul>
         </nav>
     </footer>
