Add data attributes to 'Cookie-Banner' Template

--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 </head>
 
 <body>
-    <div class="cookie-banner">
+    <div class="cookie-banner" data-cookie-banner>
         <div class="cookie-banner__content">
             <p>
-                We use cookies to improve your experience. Please read our <a
-                    href="https://policies.google.com/technologies/cookies?hl=en-US">cookie policy</a> for more
-                information
-                about how we use
-                cookies.
+                We use cookies to improve your experience. Please read our
+                <a href="https://policies.google.com/technologies/cookies?hl=en-US">cookie policy</a>
+                for more information about how we use cookies.
             </p>
         </div>
-        <button class="cookie-banner__close">x</button>
+        <button class="cookie-banner__close" data-cookie-banner-close>&times;</button>
     </div>
+
     <header>
         <h1 class="sr-only">Google</h1>
         <nav class="main-nav">
@@ -95,6 +94,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="/js/scripts.js" type="module"></script>
 </body>
 
 </html>
