--- a/index.html
+++ b/index.html
@@ -41,6 +41,177 @@
                     <button class="button button--primary">Sign in</button>
                 </li>
             </ul>
+            <div class="dropdown-menu">
+                <ul class="dropdown-menu__list">
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                </ul>
+                <div class="separator"></div>
+                <ul class="dropdown-menu__list">
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <li class="dropdown-menu__list-item">
+                        <a href="#URL_BUTTON" class="dropdown-menu__list-link">
+                            <span class="dropdown-menu__icon dropdown-menu__icon--gmail"></span>
+                            Button
+                        </a>
+                    </li>
+                    <div class="more-button">
+                        <button class="button button--small border-only">More from Google</button>
+                    </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -81,20 +252,20 @@
     <footer class="footer">
         <div class="footer__country-information">Poland</div>
         <nav class="footer__links">
-            <ul>
+            <ul class="footer__links-list">
                 <li class="footer__links-item"><a href="#_GLINK">Advertising</a></li>
                 <li class="footer__links-item"><a href="#_GLINK">Business</a></li>
                 <li class="footer__links-item"><a href="#_GLINK">About</a></li>
                 <li class="footer__links-item"><a href="#_GLINK">How Search Works</a></li>
             </ul>
-            <ul>
+            <ul class="footer__links-list">
                 <li class="footer__links-item"><a href="#_GLINK">Privacy</a></li>
                 <li class="footer__links-item"><a href="#_GLINK">Terms</a></li>
                 <li class="footer__links-item"><a href="#_GLINK">Settings</a></li>
             </ul>
         </nav>
     </footer>
-    <script src="/js/scripts.js" type="module"></script>
+    <script src="./js/scripts.js" type="module"></script>
 </body>
 
 </html>
