products-dropdown CR fixes

--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
                         </a>
                     </li>
                 </ul>
-                <div class="separator"></div>
                 <ul class="dropdown-menu__list">
                     <li class="dropdown-menu__list-item">
                         <a href="#URL_BUTTON" class="dropdown-menu__list-link">
@@ -210,7 +209,7 @@
                     </li>
                 </ul>
                 <div class="more-button">
-                    <button class="button button--small border-only">More from Google</button>
+                    <a href="#URL_BUTTON" class="button button--small button--border-only">More from Google</a>
                 </div>
             </div>
         </nav>
