--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>Project UFEM</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
